// Copyright Â© Spelldawn 2021-present

// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at

//    https://www.apache.org/licenses/LICENSE-2.0

// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package sd;
option csharp_namespace = "Spelldawn.Protos";

enum PlayerName {
  PLAYER_NAME_UNSPECIFIED = 0;
  PLAYER_NAME_USER = 1;
  PLAYER_NAME_OPPONENT = 2;
}

message CardId {
  oneof card_id {
    PlayerName identity_card = 1;
    int32 value = 2;
  }
}

enum InnerRoom {
  INNER_ROOM_UNSPECIFIED = 0;
  INNER_ROOM_TREASURY = 1;
  INNER_ROOM_SANCTUM = 2;
  INNER_ROOM_CRYPTS = 3;
}

message RoomId {
  oneof room_id {
    InnerRoom inner_room = 1;
    int32 outer_room = 2;
  }
}

message TargetId {
  oneof target {
    CardId card_id = 1;
    RoomId room_id = 2;
  }
}